# dstoolkit-data-rafting-kit

./: .gitignore  .pre-commit-config.yaml  README.md  SUPPORT.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci-checks.yaml  codeql-analysis.yaml
data_rafting_kit/: __init__.py  configuration_spec.py  data_rafting_kit.py  env_spec.py
data_rafting_kit/common/: base_factory.py  base_spec.py  pipeline_dataframe_holder.py  schema.py  secret_management.py  str_enum.py  test_utils.py
data_rafting_kit/data_quality/: checks.py  data_quality_base.py  data_quality_checks.py  data_quality_factory.py  data_quality_mapping.py  data_quality_spec.py  great_expectations.py  metrics.py
data_rafting_kit/data_quality/tests/: data_quality_check_test.py  data_quality_data_test.py  data_quality_spec_test.py  data_quality_step_test.py
data_rafting_kit/data_quality/tests/mock_data/checks/: mock_expect_column_distinct_values_to_be_in_set.json  mock_expect_column_distinct_values_to_equal_set.json  mock_expect_column_max_to_be_between.json  mock_expect_column_mean_to_be_between.json  mock_expect_column_median_to_be_between.json  mock_expect_column_most_common_value_to_be_in_set.json  mock_expect_column_proportion_of_unique_values_to_be_between.json  mock_expect_column_sum_to_be_between.json  mock_expect_column_to_exist.json  mock_expect_column_unique_value_count_to_be_between.json  mock_expect_column_value_lengths_to_equal.json  mock_expect_column_value_z_scores_to_be_less_than.json  mock_expect_column_values_to_be_decreasing.json  mock_expect_column_values_to_be_in_set.json  mock_expect_column_values_to_be_increasing.json  mock_expect_column_values_to_be_unique.json  mock_expect_column_values_to_match_json_schema.json  mock_expect_column_values_to_match_regex.json  mock_expect_column_values_to_match_regex_list.json  mock_expect_column_values_to_not_be_in_set.json  mock_expect_column_values_to_not_be_null.json  mock_expect_column_values_to_not_match_like_pattern.json  mock_unexpected_rows_expectation.json  (+7 more)
data_rafting_kit/io/: console.py  delta_table.py  event_hub.py  file.py  io_base.py  io_factory.py  io_mapping.py  io_spec.py
data_rafting_kit/testing/: testing_local.py  testing_spec.py
data_rafting_kit/transformations/: presido.py  pyspark.py  transformation_base.py  transformation_factory.py  transformation_mapping.py  transformation_spec.py  window_transformations.py
data_rafting_kit/transformations/tests/: transformation_data_test.py  transformation_spec_test.py
samples/: New York Taxi Dataset.py
samples/batch/: Pipeline tests.py  sub_config_files.yaml  sub_transformations.yaml
samples/streaming/: event_hub.yaml
(+213 files in other folders)
