[tool.poetry]
name = "data-rafting-kit"
version = "0.1.0"
description = "Data Rafting Kit is an utility library that brings an declarative approach to PySpark data pipelines."
authors = ["Ben Constable <benconstable@microsoft.com>", "Nina Stijepovic <nstijepovic@microsoft.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/microsoft/dstoolkit-data-rafting-kit"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.4"
pyyaml = "^6.0.1"
pydantic = "^2.7.1"
pyspark = "^3.5.1"
presidio-analyzer = "^2.2.354"
presidio-anonymizer = "^2.2.354"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
great-expectations = "^0.18.13"
delta-spark = "^3.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^24.4.2"
ruff = "^0.5.0"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "PL",  # pylint
    "TID", # tidy imports
    "RUF", # ruff
    "SIM", # simplify
    "S", # bandit
    "D", # pydocstyle
    "N", # pep8 naming
    "G", # flake8 logging format
    "Q", # flake8 quotes
    "ARG", # flake8-argparse
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
    "W191", # indentation contains tabs
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "D401", # First line should be in imperative mood
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "S101", # Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
    "B011", # Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
]

[tool.coverage.run]
omit = [
    "tests/*",
    "*/tests/*"
]
